<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LIV</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email:</string>
    <string name="logo">LIV</string>
	<string name="password">Password:</string>
	<string name="login">Login</string>
	<string name="register_hint">New to LIV? Register Here</string>
	<string name="name">Full Name</string>
	<string name="register">Register</string>
	<string name="login_hint">Already has an account! Login Here</string>
	<string name="register_activity_lable">Register New Account</string>
	<string name="login_activity_lable">Login Account</string>
	<string name="welcome">Welcome!</string>
	<string name="logout">Log me out</string>
	<string name="ok">OK</string>
	<string name="loginError">Invalid username/password</string>
	<string name="registerError">Error in Registration</string>
	<string name="title1">Jogging</string>
	<string name="desc1"> When I was setting up my first SQL database test table with phpMyAdmin on my website I was confronted with making choices I dont remember encountering in the tutorials One choice in particular about collation stumped me The default collation in phpMyAdmin for tables is automatically latin1_swedish_c and I accepted it since I didnt have a clue about what might be a better choice and I looked collation up at dev mysql com but it didnt help me understand what I should choose I had hoped Id see something like English as an option but no such luck or I missed it if it was there </string>
	<string-array name="location_array">
		<item>Los Angeles</item>
		<item>USC</item>
		<item>Santa Barbara</item>    
	</string-array>
</resources>