<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textStyle="bold" />

        <VideoView
            android:id="@+id/video1"
            android:layout_width="300dip"
            android:layout_height="300dip"
            android:layout_gravity="center_horizontal"       
            />
        <RelativeLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content">
        	<TextView
        	    android:id="@+id/title1"
        	    android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/title1"
        		android:layout_centerHorizontal="true"
        	    />
        	<TextView
        	    android:id="@+id/description1"
        	    android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/title1"
        		android:text="@string/desc1"
        	    />
        </RelativeLayout>
        <VideoView
            android:id="@+id/video2"
            android:layout_width="300dip"
            android:layout_height="300dip" 
            android:layout_gravity="center_horizontal" 
            />
        
    </LinearLayout>
</ScrollView>